--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div id="modal"></div>
     <div id="root">not rendered</div>
     <!-- <script src="https://unpkg.com/react@16.5.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.development.js"></script> -->
