--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div id="root">not rendered</div>
     <!-- <script src="https://unpkg.com/react@16.5.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.5.2/umd/react-dom.development.js"></script> -->
-    <script src="./App.js"></script>
+    <script src="./ClientApp.js"></script>
 
 </body>
 
